--- a/index.html
+++ b/index.html
@@ -5,25 +5,85 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.5.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.21.0"></script>
   
-  <link rel="stylesheet" type="text/css" href="styles.css" media="all">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/grids-responsive-min.css" />
+
+  <!-- google font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+
+  <link rel="stylesheet" type="text/css" href="style.css" media="all">
+
+  <title>Data visualisation 2 - Remy</title>
 </head>
+
 <body>
-  
-  <div style="display:flex; gap:20px;">
-    <div style="flex:1;">
-      <h2>Taxes as a Share of Cigarette Price</h2>
-      <div id="choropleth_map"></div>
+  <div class="page">
+
+    <div class="pure-g">
+      <div class="pure-u-1">
+        <h1 class="center">Tobacco Taxes and Their Impact on Health</h1>
+        <p class="center">Tobacco related deaths has and is still one of the leading causes of preventable death worldwide. Many countries worldwide
+          have introduced higher taxes on tobacco products to help reduce smoking rates. How effective are these taxes in reducing deaths caused by
+          tobacco use such as smoking?
+
+        </p>
+      </div>
     </div>
-    <div style="flex:1;">
-      <h2>Trends in Global Lung Cancer Deaths Per Region</h2>
-      <div id="line_chart"></div>
+
+    
+    <div class="pure-g">
+      <div class="pure-u-1">
+        <div id="choropleth_map" class="vis-container center"></div>
+        <p class="center">Tobacco taxes around the world vary depending on each country's policies. In many European countries and in Australia,
+          taxes make up a significant amount of the price of cigarettes at around 70% or more. However, countries in Asia and Africa tend to have 
+          a much lower percentage of tax on the price of cigarettes. 
+        </p>
+      </div>
     </div>
+
+    <div class="pure-g">
+      <div class="pure-u-2-3">
+        <div id="bar_chart" class="vis-container"></div>
+      </div>
+      <div class="pure-u-1-3">
+        <div class="description description-right">
+          <h2>Global Lung Cancer Deaths per Year</h2>
+          <p>text</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="pure-g">
+      <div class="pure-u-1-3">
+        <div class="description description-left">
+          <h2>Regional Trends Over Time</h2>
+          <p>text</p>
+        </div>
+      </div>
+      <div class="pure-u-2-3">
+        <div id="line_chart" class="vis-container"></div>
+      </div>
+    </div>
+
+    <div class="pure-g">
+      <div class="pure-u-1">
+        <div class="center">
+          <h2>Taxes vs Smoking-Related Deaths</h2>
+          <div id="taxes_bar_chart" class="vis-container"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="pure-g">
+      <div class="pure-u-1 small-font center">
+        <p>data sources</p>
+      </div>
+    </div>
+
   </div>
-
-  <h2>Global Lung Cancer Deaths per Year</h2>
-  <div id="bar_chart"></div>
-
-  
 
   <script type="text/javascript">
     vegaEmbed('#choropleth_map', 'taxes_map.vg.json')
@@ -35,6 +95,10 @@
       }).catch(console.error);
 
     vegaEmbed('#line_chart', 'line_chart.vg.json')
+      .then(function(result) {
+      }).catch(console.error);
+    
+    vegaEmbed('#taxes_bar_chart', 'taxes_bar_chart.vg.json')
       .then(function(result) {
       }).catch(console.error);
   </script>
